--- a/test/index.html
+++ b/test/index.html
@@ -14,6 +14,6 @@
       <img id="ad" src="" style="" />
     </span>
 
-    <script type="text/javascript" src="/js"></script>
+    <script type="text/javascript" src="test.js"></script>
   </body>
 </html>
