--- a/test/index.html
+++ b/test/index.html
@@ -15,5 +15,10 @@
     </span>
 
     <script type="text/javascript" src="test.js"></script>
+
+    <div style="position: absolute; top: 500px; left: 0px">
+    <script type="text/javascript" src="https://j.zucks.net.zimg.jp/j?f=102775"></script>
+    </div>
+
   </body>
 </html>
