--- a/test/outer.html
+++ b/test/outer.html
@@ -7,7 +7,7 @@
 
 <div style="width: 4000px; height: 4000px" />
 
-<iframe src="innder.html" style="position: absolute; top: 500px; left: 0px"></iframe>
+<iframe src="inner.html" style="position: absolute; top: 500px; left: 0px"></iframe>
 
 </body>
 </html>
