--- a/test/outer.html
+++ b/test/outer.html
@@ -7,7 +7,9 @@
 
 <div style="width: 4000px; height: 4000px" />
 
-<iframe src="inner.html" style="position: absolute; top: 500px; left: 0px; width: 350; height:80; border:none"></iframe>
+<div style="position: absolute; top: 500px; left: 0px; border: solid">
+<iframe src="inner.html" style="width: 500px; height:500px; border:none"></iframe>
+</div>
 
 </body>
 </html>
