--- a/test/inner.html
+++ b/test/inner.html
@@ -105,6 +105,8 @@ function(param) {
     }
 
     var inViewablePoll = function() {
+
+      console.log(hasFocus());
       var now = new Date()
 
       if (!hasFocus()) {
