--- a/test/inner.html
+++ b/test/inner.html
@@ -463,5 +463,9 @@ function(param) {
 
   </script>
 
+  <div>
+    <script type="text/javascript" src="https://j.zucks.net.zimg.jp/j?f=102775"></script>
+  </div>
+
 </body>
 </html>
