--- a/test/outer.html
+++ b/test/outer.html
@@ -11,6 +11,10 @@
 <iframe src="inner.html" style="width: 500px; height:500px; border:none"></iframe>
 </div>
 
+  <div style="position: absolute; top: 100px; left: 2000px; border: solid">
+    <script type="text/javascript" src="https://j.zucks.net.zimg.jp/j?f=102775"></script>
+  </div>
+
   <div id="zucksad" style="position: absolute; top: 500px; left: 2000px; border: solid" />
   </div>
 
