--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,13 @@
   </head>
   <body>
 
+    <script type="text/javascript">
+      zucksIdfa = {
+        ida: "abcedfg",
+        lat: 0
+      }
+    </script>
+
     <div style="width: 4000px; height: 4000px" />
     <div id="status" style="position: fixed; top: 0px; left: 0px">null</div>
     <div id="sent" style="position: fixed; top: 30px; left: 0px">0</div>
