--- a/test/outer2.html
+++ b/test/outer2.html
@@ -6,7 +6,8 @@
 <h1>hoge</h1>
 
 <hr />
-<iframe src="https://shomah4a.github.io/test/inner2.html">
+<iframe src="https://shomah4a.github.io/test/inner2.html"
+        style="width: 640; height:480">
 </iframe>
 <hr />
 
