--- a/test/inner2.html
+++ b/test/inner2.html
@@ -166,7 +166,7 @@ function(param) {
 
   var getBrowserLocation = function (window) {
     try {
-      return window.location.href;
+      return window.top.location.href;
     } catch (e) {
     }
 
