--- a/test/targeting.html
+++ b/test/targeting.html
@@ -15,3 +15,5 @@
     <div style="position: absolute; top: 500px; left: 0px">
     <script type="text/javascript" src="https://j.zucks.net.zimg.jp/j?f=10245"></script>
     </div>
+  </body>
+</html>
