--- a/test/targeting.html
+++ b/test/targeting.html
@@ -7,7 +7,7 @@
 
     <script type="text/javascript">
       zucksIdfa = {
-        ida: "abcedfg",
+        ida: "34C94D00-AAB1-42D4-856C-3A7AD1821234",
         lat: 0
       }
     </script>
