--- a/domainlist/index.html
+++ b/domainlist/index.html
@@ -6,6 +6,28 @@
 </head>
 <body>
 
+
+<table>
+    <caption>convert sample</caption>
+    <tr>
+        <th>from</th>
+        <th>to</th>
+    </tr>
+    <tr>
+        <td style="font-family: monospace">http://example.com/</td>
+        <td style="font-family: monospace">example.com</td>
+    </tr>
+
+    <tr>
+        <td style="font-family: monospace">*.example.com</td>
+        <td style="font-family: monospace">example.com</td>
+    </tr>
+    <tr>
+        <td style="font-family: monospace">.example.com</td>
+        <td style="font-family: monospace">example.com</td>
+    </tr>
+</table>
+
 <div>
     <p>Source List</p>
     <textarea id="src" cols="100" rows="50"></textarea>
